; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_stream.c_svn_stream_for_stdin2.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_stream.c_svn_stream_for_stdin2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@APR_BUFFERED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"Can't open stdin\00", align 1
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_stream_for_stdin2(i32** %0, i64 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store i32** %0, i32*** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32* %2, i32** %7, align 8
  %11 = load i64, i64* %6, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = load i32, i32* @APR_BUFFERED, align 4
  br label %16

15:                                               ; preds = %3
  br label %16

16:                                               ; preds = %15, %13
  %17 = phi i32 [ %14, %13 ], [ 0, %15 ]
  store i32 %17, i32* %10, align 4
  %18 = load i32, i32* %10, align 4
  %19 = load i32*, i32** %7, align 8
  %20 = call i64 @apr_file_open_flags_stdin(i32** %8, i32 %18, i32* %19)
  store i64 %20, i64* %9, align 8
  %21 = load i64, i64* %9, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %16
  %24 = load i64, i64* %9, align 8
  %25 = call i32* @svn_error_wrap_apr(i64 %24, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  store i32* %25, i32** %4, align 8
  br label %35

26:                                               ; preds = %16
  %27 = load i32*, i32** %8, align 8
  %28 = load i32, i32* @TRUE, align 4
  %29 = load i32, i32* @FALSE, align 4
  %30 = load i32, i32* @FALSE, align 4
  %31 = load i32*, i32** %7, align 8
  %32 = call i32* @make_stream_from_apr_file(i32* %27, i32 %28, i32 %29, i32 %30, i32* %31)
  %33 = load i32**, i32*** %5, align 8
  store i32* %32, i32** %33, align 8
  %34 = load i32*, i32** @SVN_NO_ERROR, align 8
  store i32* %34, i32** %4, align 8
  br label %35

35:                                               ; preds = %26, %23
  %36 = load i32*, i32** %4, align 8
  ret i32* %36
}

declare dso_local i64 @apr_file_open_flags_stdin(i32**, i32, i32*) #1

declare dso_local i32* @svn_error_wrap_apr(i64, i8*) #1

declare dso_local i32* @make_stream_from_apr_file(i32*, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
